Version 1.0.18:
- Add support for delivery to MS Exchange pickup directories, based on a patch
  by Julien Larigaldie.
- Use fflush() before fsync(), to ensure that all data reaches the disk.
- Maildir delivery: check for zero-length hostname.
- Update gnulib to 2009-07-27.

Version 1.0.17:
- Update gnulib to 2009-04-11.
- Update gnulib to 2009-03-07. Remove gnulib modules fseek/fseeko/lseek because
  they cause errors on MinGW: files opened with "r+" cannot be written to.
  Provide our own fseeko instead if it does not exist; see configure.ac.
- Improve test for non-existing UIDLS file.
- Fix an invalid memory access in pop3_retr().
- Document that maildir delivery requires a file system that supports hard 
  links.
- Use more gnulib modules to remove more W32 workarounds from the source.
- Add missing gnulib module strerror for meaningful error messages on W32.

Version 1.0.16:
- Remove most W32-specific code from net.c and use the appropriate gnulib
  modules instead.
- Gnulib upate to 2008-12-24.
- Added a vim syntax file for mpoprc files to scripts/vim. The file was
  originally written by Simon Ruderich for msmtp. Thanks!
- Unified handling of the Gnome and MacOS keyrings. Both are disabled by default
  and must be enabled using --with-*-keyring options.
- From msmtp: Support for SYSCONFDIR/netrc (as a fallback for ~/.netrc) was
  added by Jim Pryor. Thanks!
- Added support for the GNOME Keyring. Originally written by Satoru SATOH for
  msmtp. Thanks a lot!

Version 1.0.15:
- Fix retrieval of mails that have no body.
- Do not allow comments in UIDLs files after the first non-comment line, to
  prevent UIDs starting with '#' from being treated as comments. Bug reported
  by Robert Siemer.

Version 1.0.14:
- Added the new tls_crl_file configuration command and the corresponding
  --tls-crl-file option.
- Added the new tls_min_dh_prime_bits configuration command and the
  corresponding --tls-min-dh-prime-bits option.