@@ -9,7 +9,7 @@
 # the same distribution terms as the rest of that program.
 #
 # Generated by gnulib-tool.
-# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=gnulib --m4-base=gnulib/m4 --doc-base=doc --tests-base=tests --aux-dir=build-aux --avoid=fseek --avoid=fseeko --avoid=ftruncate --avoid=xalloc-die --no-libtool --macro-prefix=gl --no-vc-files arpa_inet base64 c-ctype close connect crypto/hmac-md5 crypto/md5 fseek fsync ftruncate getaddrinfo gethostname getopt getpass-gnu gettext gettimeofday havelib link nanosleep netdb recv select send setsockopt sigaction signal sigpipe sigprocmask socket sockets socklen stdio strerror sys_stat sys_wait sysexits write xalloc xstrndup xvasprintf
+# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=gnulib --m4-base=gnulib/m4 --doc-base=doc --tests-base=tests --aux-dir=build-aux --avoid=fseek --avoid=fseeko --avoid=ftruncate --avoid=gethostname --avoid=xalloc-die --no-libtool --macro-prefix=gl --no-vc-files arpa_inet base64 c-ctype close connect crypto/hmac-md5 crypto/md5 fseek fsync ftruncate getaddrinfo gethostname getopt getpass-gnu gettext gettimeofday havelib link nanosleep netdb recv select send setsockopt sigaction signal sigpipe sigprocmask socket sockets socklen stdio strerror sys_stat sys_wait sysexits write xalloc xstrndup xvasprintf
 
 AUTOMAKE_OPTIONS = 1.5 gnits
 
@@ -240,15 +240,6 @@ EXTRA_DIST += getdelim.c
 EXTRA_libgnu_a_SOURCES += getdelim.c
 
 ## end   gnulib module getdelim
-
-## begin gnulib module gethostname
-
-
-EXTRA_DIST += gethostname.c
-
-EXTRA_libgnu_a_SOURCES += gethostname.c
-
-## end   gnulib module gethostname
 
 ## begin gnulib module getline
 
